# minusone

./: .gitignore  Cargo.toml  LICENSE  README.md  devenv.nix  flake.nix  justfile
.github/workflows/: cargo_test.yml  js_build.yml  js_publish.yml  main.yml  minusonejs.yml  py_build.yml  py_publish.yml  pyminusone.yml  pyminusone39.yml  rs_publish.yml
cminusone/: Cargo.toml
cminusone/src/: lib.rs
core/: Cargo.toml
core/src/: debug.rs  engine.rs  init.rs  lib.rs  printer.rs  rule.rs  scope.rs  trace.rs  tree.rs
core/src/js/: RULES.md  array.rs  b64.rs  backend.rs  bool.rs  comparator.rs  converter.rs  deadcode.rs  encode_decode.rs  fncall.rs  forward.rs  function.rs  globals.rs  integer.rs  iterator.rs  jsfuck.rs  linter.rs  loop.rs  math.rs  mod.rs  object.rs  objectify.rs  post_process.rs  printer.rs  recursion.rs  regex.rs  specials.rs  strategy.rs  string.rs  switch.rs  ternary.rs  trace.rs  typeof.rs  utils.rs  var.rs
core/src/js/functions/: fncall.rs  function.rs  mod.rs
core/src/js/node/: buffer.rs
core/src/js/objects/: mod.rs  object.rs  objectify.rs
core/src/js/tests/: array_tests.rs  b64_tests.rs  bool_tests.rs  comparator_tests.rs  encode_decode_tests.rs  integer_tests.rs  issue152.rs  jsfuck.rs  maths_tests.rs  mod.rs  post_process_tests.rs  regex_tests.rs  specials_tests.rs  string_tests.rs  var_tests.rs
core/src/ps/: RULES.md  access.rs  array.rs  backend.rs  bool.rs  cast.rs  comparison.rs  foreach.rs  forward.rs  hash.rs  integer.rs  join.rs  linter.rs  loops.rs  method.rs  mod.rs  static.rs  strategy.rs  string.rs  switch.rs  trace.rs  typing.rs  var.rs
crates/: README.md
crates/minusone-cli/: Cargo.toml  README.md
crates/minusone-cli/assets/: steps_template.html
crates/minusone-cli/src/: cli.rs  main.rs  trace_view.rs  utils.rs
crates/minusonejs/: .gitignore  Cargo.toml  README.md  justfile  package.json
crates/minusonejs/src/: lib.rs
crates/minusonejs/tests/www/: index.html  justfile
crates/minusonejs/wit/: ditto.wit
crates/pyminusone/: .gitignore  Cargo.toml  README.md  justfile  pyproject.toml  test.py
crates/pyminusone/src/: lib.rs
minusonejs/: Cargo.toml  README.md  justfile  package-lock.json  package.json
minusonejs/src/: lib.rs
minusonejs/tests/www/: .gitignore  index.html  justfile
minusonejs/wit/: ditto.wit
pyminusone/: Cargo.toml  README.md  pyproject.toml
pyminusone/src/: lib.rs
samples/: issue152_hoisting.obf.js  issue152_hoisting.src.js  issue152_mutual_recursion_with_conditional.obf.js  issue152_nested_calls.obf.js  issue152_nested_calls.src.js  jsfuck_demo.js  jsfuck_easy.obf.js  jsfuck_easy.src.js  jsfuck_level9.obf.js  jsfuck_level9.src.js  jsfuck_octal.obf.js  jsfuck_octal.src.js  jsfuck_payload.obf.js  jsfuck_payload.src.js
src/: debug.rs  engine.rs  error.rs  init.rs  lib.rs  rule.rs  scope.rs  tree.rs
src/core/: debug.rs  entity.rs  mod.rs  rule.rs  tree.rs
src/ps/: access.rs  array.rs  b64.rs  behavior.rs  bool.rs  cast.rs  charconcat.rs  comparison.rs  detect.rs  foreach.rs  forward.rs  fromutf.rs  hash.rs  inferred.rs  integer.rs  join.rs  linter.rs  litter.rs  loops.rs  method.rs  mod.rs  static.rs  strategy.rs  string.rs  tool.rs  typing.rs  var.rs
