[workspace]
members = [
    "core",
    "crates/*"
]
resolver = "3"

[workspace.dependencies]
log = "0.4.29"

[workspace.package]
version = "0.5.0"
authors = ["Airbus CERT <cert@airbus.com>"]
description = "A script deobfuscator"
repository = "https://github.com/airbus-cert/minusone"
readme = "README.md"
license = "MIT"
