[package]
name = "pyminusone"
version = "0.1.19"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyminusone"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
minusone = { path = ".." }
tree-sitter-powershell = { git = "https://github.com/airbus-cert/tree-sitter-powershell" }
tree-sitter-highlight = "^0.20"
