[package]
name = "pyminusone"
version = "0.1.28"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyminusone"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
minusone = { path = ".." }
tree-sitter-powershell = { git = "https://github.com/airbus-cert/tree-sitter-powershell" , tag = "v1.2.0"}
tree-sitter-highlight = "^0.22"
