[package]
name = "pyminusone"
version = "0.3.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyminusone"
crate-type = ["cdylib"]

[dependencies]
minusone = { path = ".." }
tree-sitter-powershell = "0.25.2"
tree-sitter-highlight = "^0.25"

[dependencies.pyo3]
version = "0.24.2"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
