[package]
name = "minusone-cli"
version = "0.5.0"
authors = ["Airbus CERT <cert@airbus.com>"]
description = "A script deobfuscator"
repository = "https://github.com/airbus-cert/minusone"
readme = "README.md"
license = "MIT"

[dependencies]
clap = { version = "^2.33"}
minusone = { path = "../../core"}
