[package]
edition = "2024"
name = "minusone-cli"
version = "0.6.2"
authors = ["Airbus CERT <cert@airbus.com>"]
description = "A script deobfuscator"
repository = "https://github.com/airbus-cert/minusone"
readme = "README.md"
license = "MIT"

[dependencies]
clap = "4.5.60"
clap-help = "1.4.0"
minusone = { path = "../../core" }
pretty_env_logger = "0.5.0"
log = { workspace = true }
base64 = { workspace = true }
termimad = "0.34.1"
